--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 688567295390.dkr.ecr.ap-south-1.amazonaws.com
-      - REPOSITORY_URI=688567295390.dkr.ecr.ap-south-1.amazonaws.com/prod/test
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 688567295390.dkr.ecr.us-east-1.amazonaws.com
+      - REPOSITORY_URI=688567295390.dkr.ecr.us-east-1.amazonaws.com/test
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
@@ -22,7 +22,6 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"chat-app-container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 
 artifacts:
   files:
