--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,24 +4,19 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 688567295390.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=688567295390.dkr.ecr.us-east-1.amazonaws.com/test
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t your-image-name .
+      - docker tag your-image-name:latest 688567295390.dkr.ecr.us-east-1.amazonaws.com/your-repo-name:latest
   post_build:
     commands:
-      - echo Build completed on `date`
-      - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo Pushing the Docker image...
+      - docker push 688567295390.dkr.ecr.us-east-1.amazonaws.com/your-repo-name:latest
       - echo Writing image definitions file...
+      - printf '[{"name":"your-container-name","imageUri":"688567295390.dkr.ecr.us-east-1.amazonaws.com/your-repo-name:latest"}]' > imagedefinitions.json
 
 artifacts:
   files:
